--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Trabajo Práctico 1</title>
 </head>
 <body>
-    <header>
-        <li> <a href="catalogo.html">CATÁLOGO</a> </li>
-        <li> <a href="contacto.html">CONTACTO</a></li>
-        <li> <a href="quienes_somos.html">QUIENES SOMOS</a></li>
-        <li> <a href="galeria.html">GALERIA</a></li>
-    </header>
-
+    <h1>Nombre o logo</h1> <!-- Poner nombre o logo de la web -->
+    <nav>
+      <ul class="menu">
+        <li><a href="catalogo.html">CATÁLOGO</a></li>
+        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="quienes_somos.html">QUIÉNES SOMOS</a></li>
+        <li><a href="galeria.html">GALERÍA</a></li>
+      </ul>
+    </nav>
 
 
 
