modificados y creados intitucional y mejorado el index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a nuestro catalogo.</h1>
+        <h1>IDW S.A - Reserva de salones de eventos.</h1>
         <ul>
             <li><a href="institucional.html">Informacion Institucional</a></li>
             <li><a href="contacto.html">Informacion Contacto</a></li>
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section>
-            <h3>Bienvenidos a la primera pagina</h3>
+            <h3>Bienvenidos a nuesto catalogo</h3>
             <p>Esta es una prueba de la primera pagina de IDW</p>
         </section>
 
