--- a/institucional.html
+++ b/institucional.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informacion Institucional</title>
 </head>
-
+<body>
+    <header>
+        <h1>Información Institucional</h1>
+    </header>
+    <ul>
+        <li><a href="contacto.html">Informacion Contacto</a></li>
+        <li><a href="index.html">Inicio</a></li>
+    <main>
+        <section>
+            <h2>Quiénes Somos</h2>
+            <p>Somos una empresa especializada en el alquiler de salones de fiesta, ofreciendo espacios únicos y servicios personalizados para garantizar eventos inolvidables.</p>
+        </section>
+        <section>
+            <h2>Misión</h2>
+            <p>Nuestra misión es proporcionar salones de fiesta de alta calidad y servicios excepcionales que superen las expectativas de nuestros clientes, creando momentos memorables.</p>
+        </section>
+        <section>
+            <h2>Visión</h2>
+            <p>Ser la empresa líder en el alquiler de salones de fiesta, reconocida por nuestra excelencia, atención al cliente y compromiso con la satisfacción de nuestros clientes.</p>
+        </section>
+        <section>
+            <h2>Valores</h2>
+            <ul>
+                <li>Calidad</li>
+                <li>Innovación</li>
+                <li>Compromiso</li>
+                <li>Trabajo en equipo</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 IDW. Todos los derechos reservados.</p>
+    </footer>
+</body>
 
 </html>
