agregados algunos recursos de imagenes  para el proyecto y añadido un nuevo  elemento de imagen en el index.html

--- a/index.html
+++ b/index.html
@@ -24,11 +24,25 @@
                 <li>
                     <strong>Salon N°1</strong> La Valle 123
                     <br>
-                    <img src="https://content.elmueble.com/medio/2021/11/07/salon-con-televisor-00528751-o_24de88a3_2000x1377.jpg" width="800" height="500" alt="Salon1">
+                    <img src=Recursos/salon1.jpg alt="Salon 1" width="600" height="400">
                     <br>
                     <p>Descripcion salon 1</p>
 
                 </li>
+                <li>
+                    <strong>Salon N°2</strong> La Valle 456
+                    <br>
+                    <img src=Recursos/salon2.jpg alt="Salon 2" width="600" height="400">
+                    <br>
+                    <p>Descripcion salon 2</p>
+                </li>
+
+                <li>
+                    <strong>Salon N°3</strong> La Valle 789
+                    <br>
+                    <img src=Recursos/salon3.jpg alt="Salon 3" width="600" height="400">
+                    <br>
+                    <p>Descripcion salon 3</p>
             </ol>
         </section>
     </main>
